Cards Top5 refeitos

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
   </header>
 
   <!--CARROSSEL-->
-    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
+    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2000">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
             aria-current="true" aria-label="Slide 1"></button>
@@ -216,51 +216,51 @@
             
             <!-- Card 1 -->
             <div class="card">
-              <img src="img/receita1.jpg" class="card-img-top" alt="Receita 1">
+              <img src="img/TOP1 - Feijoada.Camadas.png" class="card-img-top" alt="Receita 1">
               <div class="card-body">
-                <h5 class="card-title">Receita 1</h5>
-                <p class="card-text">Descrição breve da Receita 1.</p>
-                <a href="receita1.html" class="btn btn-warning w-50">Ver Receita</a> <!-- Botão para ver a receita -->
+                <h5 class="card-title">Feijoada em Camadas</h5>
+                <p class="card-text">Descrição breve da Receita.</p>
+                <a href="receita1.html" class="btn btn-warning w-30" style="align-items: end;">Receita</a> <!-- Botão para ver a receita -->
               </div>
             </div>
 
             <!-- Card 2 -->
             <div class="card">
-              <img src="img/receita2.jpg" class="card-img-top" alt="Receita 2">
+              <img src="img/TOP2 - Marido Gelado.png" class="card-img-top" alt="Receita 2">
               <div class="card-body">
-                <h5 class="card-title">Receita 2</h5>
-                <p class="card-text">Descrição breve da Receita 2.</p>
-                <a href="receita1.html" class="btn btn-warning w-50">Ver Receita</a> <!-- Botão para ver a receita -->
+                <h5 class="card-title">Marido Gelado</h5>
+                <p class="card-text">Descrição breve da Receita.</p>
+                <a href="receita1.html" class="btn btn-warning w-30" style="position: bottom;">Receita</a> <!-- Botão para ver a receita -->
               </div>
             </div>
 
             <!-- Card 3 -->
             <div class="card">
-              <img src="img/receita3.jpg" class="card-img-top" alt="Receita 3">
+              <img src="img/TOP3 - Salada Tropical.png" class="card-img-top" alt="Receita 3">
               <div class="card-body">
-                <h5 class="card-title">Receita 3</h5>
+                <h5 class="card-title">Salada Tropical</h5>
                 <p class="card-text">Descrição breve da Receita 3.</p>
-                <a href="receita1.html" class="btn btn-warning w-50">Ver Receita</a> <!-- Botão para ver a receita -->
+                <a href="receita1.html" class="btn btn-warning w-30">Receita</a> <!-- Botão para ver a receita -->
               </div>
             </div>
 
             <!-- Card 4 -->
             <div class="card">
-              <img src="img/receita4.jpg" class="card-img-top" alt="Receita 4">
+              <img src="img/TOP 4 - torta-de-morango-e-bolacha-champagne.webp" class="card-img-top" alt="Receita 4">
               <div class="card-body">
-                <h5 class="card-title">Receita 4</h5>
+                <h5 class="card-title">Torata de Morango</h5>
                 <p class="card-text">Descrição breve da Receita 4.</p>
-                <a href="receita1.html" class="btn btn-warning w-50">Ver Receita</a> <!-- Botão para ver a receita -->
+                <a href="receita1.html" class="btn btn-warning w-30">Receita</a> <!-- Botão para ver a receita -->
               </div>
             </div>
 
             <!-- Card 5 -->
             <div class="card">
-              <img src="img/receita5.jpg" class="card-img-top" alt="Receita 5">
+              <img src="img/TOP 5 - barrig-de-porco-Assada-com-Batata-.jpg" class="card-img-top" alt="Receita 5">
               <div class="card-body">
-                <h5 class="card-title">Receita 5</h5>
+                <h5 class="card-title">Barriga de Porco</h5>
                 <p class="card-text">Descrição breve da Receita 5.</p>
-                <a href="receita1.html" class="btn btn-warning w-50">Ver Receita</a> <!-- Botão para ver a receita -->
+                <a href="receita1.html" class="btn btn-warning w-30">Receita</a> <!-- Botão para ver a receita -->
               </div>
             </div>
 
