--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
               <img src="img/TOP1 - Feijoada.Camadas.png" class="card-img-top" alt="Receita 1">
               <div class="card-body">
                 <h5 class="card-title">Feijoada em Camadas</h5>
-                <p class="card-text">Descrição breve da Receita.</p>
+                <p class="card-text">Receita Original!</p>
                 <a href="receita1.html" class="btn btn-warning w-30" style="align-items: end;">Receita</a> <!-- Botão para ver a receita -->
               </div>
             </div>
@@ -229,7 +229,7 @@
               <img src="img/TOP2 - Marido Gelado.png" class="card-img-top" alt="Receita 2">
               <div class="card-body">
                 <h5 class="card-title">Marido Gelado</h5>
-                <p class="card-text">Descrição breve da Receita.</p>
+                <p class="card-text">A sobremesa perfeita para toda a família.</p>
                 <a href="receita1.html" class="btn btn-warning w-30" style="position: bottom;">Receita</a> <!-- Botão para ver a receita -->
               </div>
             </div>
@@ -239,7 +239,7 @@
               <img src="img/TOP3 - Salada Tropical.png" class="card-img-top" alt="Receita 3">
               <div class="card-body">
                 <h5 class="card-title">Salada Tropical</h5>
-                <p class="card-text">Descrição breve da Receita 3.</p>
+                <p class="card-text">Uma salada divertida e nutritiva!</p>
                 <a href="receita1.html" class="btn btn-warning w-30">Receita</a> <!-- Botão para ver a receita -->
               </div>
             </div>
@@ -249,7 +249,7 @@
               <img src="img/TOP 4 - torta-de-morango-e-bolacha-champagne.webp" class="card-img-top" alt="Receita 4">
               <div class="card-body">
                 <h5 class="card-title">Torata de Morango</h5>
-                <p class="card-text">Descrição breve da Receita 4.</p>
+                <p class="card-text">Torta com biscoitos champagne.</p>
                 <a href="receita1.html" class="btn btn-warning w-30">Receita</a> <!-- Botão para ver a receita -->
               </div>
             </div>
@@ -259,7 +259,7 @@
               <img src="img/TOP 5 - barrig-de-porco-Assada-com-Batata-.jpg" class="card-img-top" alt="Receita 5">
               <div class="card-body">
                 <h5 class="card-title">Barriga de Porco</h5>
-                <p class="card-text">Descrição breve da Receita 5.</p>
+                <p class="card-text">Carne soltinha e saborosa, acompanhada de batatas.</p>
                 <a href="receita1.html" class="btn btn-warning w-30">Receita</a> <!-- Botão para ver a receita -->
               </div>
             </div>
