--- a/index.html
+++ b/index.html
@@ -207,8 +207,8 @@
       
       <main>
       <!--BLOCO DE CARDS PARA FAVORITOS DO SITE-->
-      <div class="Título Top5">
-        <h2>Confira as 5 receitas mais populares do nosso site!</h2>
+      <div class="Título Top" style="text-align: center;">
+        <h1>✳︎ Confira as 5 receitas mais populares do nosso site! ✳︎</h1>
       </div> 
 
         <div class="container my-4">
@@ -270,7 +270,9 @@
       <!--SEÇÃO CHAMATIVA "QUEM SOMOS"-->
       <section class="quem-somos-section">
         <div class="content">
-          <h2>Saiba Mais Sobre Nós</h2>
+          <div class="Título Top">
+            <h1>Saiba Mais Sobre Nós!</h1>
+          </div> 
           <p>Conheça nossa história e nossa paixão pelas receitas típicas brasileiras.</p>
           <a href="quemsomos.html" class="btn btn-success w-20">Quem somos</a>
         </div>
