--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           </li>
 
           <li class="nav-item ms-3 me-3 dropdown">
-            <a class="nav-link nav-hover h6" href="doces.html"><strong>Does</strong></a>
+            <a class="nav-link nav-hover h6" href="doces.html"><strong>Doces</strong></a>
             <ul class="dropdown-menu border-warning">
               <li><a class="dropdown-item" href="pastadeslaoque.html">Sul</a></li>
               <li><a class="dropdown-item" href="pastadeslaoque.html">Sudeste</a></li>
@@ -193,19 +193,20 @@
 
 <body>
  <!-- CONTAINER PRINCIPAL: TEXTO E IMAGEM -->
-<div class="container my-2" style="display: flex; align-items: center; justify-content: space-between;">
+<div class="container my-2 d-flex flex-wrap align-items-center justify-content-center text-center text-lg-start">
   <!-- CONTAINER 1: TEXTO SOBRE O SITE -->
-  <div class="texto.index" style="text-align: left; flex: 1;">
+  <div class="col-lg-6 col-12">
     <h1>Olá!</h1>
     <h4>Explore a vasta culinária de todas as regiões do Brasil e descubra receitas deliciosas que representam a cultura e a tradição de cada lugar.</h4>
     <p>Seja para um almoço especial, um jantar descontraído ou uma sobremesa saborosa, temos a receita perfeita para cada momento. Embarque em uma jornada gastronômica única e experimente o melhor da culinária brasileira, com pratos típicos e inovadores de todos os estados!</p>
   </div>
 
   <!-- CONTAINER 2: IMAGEM PULSANDO -->
-  <div class="imagem.index" style="flex: 1; text-align: right;">
-    <img src="img/favicon.ico" alt="Imagem pulsando" class="imagem-pulsando">
+  <div class="col-lg-6 col-12 d-flex justify-content-center">
+    <img src="img/favicon.ico" alt="Imagem pulsando" class="imagem-pulsando img-fluid">
   </div>
 </div>
+
 
 </body>
 <!--BLOCO DE CARDS PARA FAVORITOS DO SITE-->
