2° Teste de responsividade

--- a/index.html
+++ b/index.html
@@ -193,19 +193,22 @@
 
 <body>
  <!-- CONTAINER PRINCIPAL: TEXTO E IMAGEM -->
-<div class="container my-2 d-flex flex-wrap align-items-center justify-content-center text-center text-lg-start">
-  <!-- CONTAINER 1: TEXTO SOBRE O SITE -->
-  <div class="col-lg-6 col-12">
-    <h1>Olá!</h1>
-    <h4>Explore a vasta culinária de todas as regiões do Brasil e descubra receitas deliciosas que representam a cultura e a tradição de cada lugar.</h4>
-    <p>Seja para um almoço especial, um jantar descontraído ou uma sobremesa saborosa, temos a receita perfeita para cada momento. Embarque em uma jornada gastronômica única e experimente o melhor da culinária brasileira, com pratos típicos e inovadores de todos os estados!</p>
-  </div>
+<div class="container my-2">
+  <div class="row align-items-center">
+    <!-- CONTAINER 1: TEXTO SOBRE O SITE -->
+    <div class="col-lg-6 col-12 text-lg-start text-center">
+      <h1>Olá!</h1>
+      <h4>Explore a vasta culinária de todas as regiões do Brasil e descubra receitas deliciosas que representam a cultura e a tradição de cada lugar.</h4>
+      <p>Seja para um almoço especial, um jantar descontraído ou uma sobremesa saborosa, temos a receita perfeita para cada momento. Embarque em uma jornada gastronômica única e experimente o melhor da culinária brasileira, com pratos típicos e inovadores de todos os estados!</p>
+    </div>
 
-  <!-- CONTAINER 2: IMAGEM PULSANDO -->
-  <div class="col-lg-6 col-12 d-flex justify-content-center">
-    <img src="img/favicon.ico" alt="Imagem pulsando" class="imagem-pulsando img-fluid">
+    <!-- CONTAINER 2: IMAGEM PULSANDO -->
+    <div class="col-lg-6 col-12 text-center">
+      <img src="img/favicon.ico" alt="Imagem pulsando" class="imagem-pulsando img-fluid">
+    </div>
   </div>
 </div>
+
 
 
 </body>
