--- a/index.html
+++ b/index.html
@@ -80,6 +80,13 @@
         margin: 10px; /* Menor margem em telas menores */
       }
     }
+
+    .social-icons {
+  display: block !important;
+  max-width: 100%;
+  height: auto;
+}
+
   </style>
 </head>
 
@@ -207,10 +214,6 @@
 
   </div>
 </div>
-
-
-
-
 </body>
 <!--BLOCO DE CARDS PARA FAVORITOS DO SITE-->
 <div class="Título Top" style="text-align: center;">
