--- a/index.html
+++ b/index.html
@@ -87,6 +87,12 @@
   height: auto;
 }
 
+@media (max-width: 768px) {
+  .footer-icons {
+    display: flex !important;
+  }
+}
+
   </style>
 </head>
 
