3° teste do footer

--- a/index.html
+++ b/index.html
@@ -81,23 +81,11 @@
       }
     }
 
-    .social-icons {
-  display: block !important;
-  max-width: 100%;
-  height: auto;
-}
-
-@media (max-width: 768px) {
-  .footer-icons {
-    display: flex !important;
-  }
-}
-
   </style>
 </head>
 
+<!--NAVBAR-->
 <header>
-  <!--NAVBAR-->
   <nav class="navbar navbar-expand-lg border-bottom border-warning">
     <div class="container">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -220,8 +208,8 @@
 
   </div>
 </div>
-</body>
-<!--BLOCO DE CARDS PARA FAVORITOS DO SITE-->
+
+<!-- FAVORITOS DO SITE-->
 <div class="Título Top" style="text-align: center;">
   <h1>✳︎ As 5 receitas mais populares do nosso site! ✳︎</h1>
 </div> 
@@ -281,7 +269,7 @@
     </div>
   </div>
 
-      <!-- "QUEM SOMOS" -->
+<!-- "QUEM SOMOS" -->
 <div class="container my-2" style="display: flex; align-items: center; justify-content: space-between;">
   <section class="quem-somos-section" style="flex: 1; text-align: left;">
     <div class="texto.index">
@@ -301,7 +289,6 @@
 </main>
 
 <!--FOOTER-->
-<!-- Footer -->
  <footer>
 <div class="container-fluid py-4" style="border-top: 2px solid rgb(252, 252, 119);">
   <div class="row">
