4° teste do footer

--- a/index.html
+++ b/index.html
@@ -322,16 +322,16 @@
       <h5 class="mb-3"><strong>Nos siga nas redes sociais</strong></h5>
       <div class="social-icons">
         <a href="https://www.facebook.com/SenaiMG" target="_blank">
-          <img src="img/_FOOTER Facebook .png" alt="Facebook" style="width: 40px; height: 40px; margin-right: 10px;">
+          <img src="/img/_FOOTER Facebook .png" alt="Facebook" style="width: 40px; height: 40px; margin-right: 10px;">
         </a>
         <a href="https://www.instagram.com/senaiminas" target="_blank">
-          <img src="img/_FOOTER Instagram.png" alt="Instagram" style="width: 40px; height: 40px; margin-right: 10px;">
+          <img src="/img/_FOOTER Instagram.png" alt="Instagram" style="width: 40px; height: 40px; margin-right: 10px;">
         </a>
         <a href="https://x.com/senaimg" target="_blank">
-          <img src="img/_FOOTER Twitter.png" alt="Twitter" style="width: 40px; height: 40px; margin-right: 10px;">
+          <img src="/img/_FOOTER Twitter.png" alt="Twitter" style="width: 40px; height: 40px; margin-right: 10px;">
         </a>
         <a href="https://www.youtube.com/c/SenaiMG" target="_blank">
-          <img src="img/_FOOTER youtube.png" alt="YouTube" style="width: 40px; height: 40px; margin-right: 10px;">
+          <img src="/img/_FOOTER youtube.png" alt="YouTube" style="width: 40px; height: 40px; margin-right: 10px;">
         </a>
       </div>
     </div>
