--- a/index.html
+++ b/index.html
@@ -81,6 +81,12 @@
       }
     }
 
+    /*Footer*/
+    .social-icons a {
+  outline: none;
+  text-decoration: none;
+}
+
   </style>
 </head>
 
@@ -104,81 +110,55 @@
           <li class="nav-item ms-3 me-3 dropdown">
             <a class="nav-link nav-hover h6" href="doces.html"><strong>Doces</strong></a>
             <ul class="dropdown-menu border-warning">
-              <li><a class="dropdown-item" href="pastadeslaoque.html">Sul</a></li>
-              <li><a class="dropdown-item" href="pastadeslaoque.html">Sudeste</a></li>
-              <li><a class="dropdown-item" href="pastadeslaoque.html">Centro-Oeste</a></li>
-              <li><a class="dropdown-item" href="pastadeslaoque.html">Nordeste</a></li>
-              <li><a class="dropdown-item" href="pastadeslaoque.html">Norte</a></li>
-
-              <li>
-                <hr class="dropdown-divider border-warning">
-              </li>
-
-              <li><a class="dropdown-item" href="produtos.html">Ver tudo</a></li>
+              <li><a class="dropdown-item" href="Doces/doces-sul.html">Sul</a></li>
+              <li><a class="dropdown-item" href="Doces/doces-sudeste.html">Sudeste</a></li>
+              <li><a class="dropdown-item" href="Doces/doces-centro-oeste.html">Centro-Oeste</a></li>
+              <li><a class="dropdown-item" href="Doces/doces-nordeste.html">Nordeste</a></li>
+              <li><a class="dropdown-item" href="Doces/doces-norte.html">Norte</a></li>
             </ul>
           </li>
 
           <li class="nav-item ms-3 me-3 dropdown">
             <a class="nav-link nav-hover h6" href="#" role="button"><strong>Salgados</strong></a>
             <ul class="dropdown-menu border-warning">
-              <li><a class="dropdown-item" href="pastadeslaoque.html">Sul</a></li>
-              <li><a class="dropdown-item" href="pastadeslaoque.html">Sudeste</a></li>
-              <li><a class="dropdown-item" href="pastadeslaoque.html">Centro-Oeste</a></li>
-              <li><a class="dropdown-item" href="pastadeslaoque.html">Nordeste</a></li>
-              <li><a class="dropdown-item" href="pastadeslaoque.html">Norte</a></li>
-
-              <li>
-                <hr class="dropdown-divider border-warning">
-              </li>
-              <li><a class="dropdown-item" href="produtos.html">Ver tudo</a></li>
+              <li><a class="dropdown-item" href="Salgados/salgados-sul.html">Sul</a></li>
+              <li><a class="dropdown-item" href="Salgados/salgados-sudeste.html">Sudeste</a></li>
+              <li><a class="dropdown-item" href="Salgados/salgados-centro-oeste.html">Centro-Oeste</a></li>
+              <li><a class="dropdown-item" href="Salgados/salgados-nordeste.html">Nordeste</a></li>
+              <li><a class="dropdown-item" href="Salgados/salgados-norte.html">Norte</a></li>
             </ul>
           </li>
 
           <li class="nav-item ms-3 me-3 dropdown">
             <a class="nav-link nav-hover h6" href="#" role="button"><strong>Bebidas</strong></a>
             <ul class="dropdown-menu border-warning">
-              <li><a class="dropdown-item" href="pastadeslaoque.html">Sul</a></li>
-              <li><a class="dropdown-item" href="pastadeslaoque.html">Sudeste</a></li>
-              <li><a class="dropdown-item" href="pastadeslaoque.html">Centro-Oeste</a></li>
-              <li><a class="dropdown-item" href="pastadeslaoque.html">Nordeste</a></li>
-              <li><a class="dropdown-item" href="pastadeslaoque.html">Norte</a></li>
-
-              <li>
-                <hr class="dropdown-divider border-warning">
-              </li>
-              <li><a class="dropdown-item" href="produtos.html">Ver tudo</a></li>
+              <li><a class="dropdown-item" href="Bebidas/bebidas-sul.html">Sul</a></li>
+              <li><a class="dropdown-item" href="Bebidas/bebidas-sudeste.html">Sudeste</a></li>
+              <li><a class="dropdown-item" href="Bebidas/bebidas-centro-oeste.html">Centro-Oeste</a></li>
+              <li><a class="dropdown-item" href="Bebidas/bebidas-nordeste.html">Nordeste</a></li>
+              <li><a class="dropdown-item" href="Bebidas/bebidas-norte.html">Norte</a></li>
             </ul>
           </li>
 
           <li class="nav-item ms-3 me-3 dropdown">
             <a class="nav-link nav-hover h6" href="#" role="button"><strong>Carnes</strong></a>
             <ul class="dropdown-menu border-warning">
-              <li><a class="dropdown-item" href="carnes-sul.html">Sul</a></li>
-              <li><a class="dropdown-item" href="carnes/carnes-sudeste.html">Sudeste</a></li>
-              <li><a class="dropdown-item" href="carnes-centro-oeste.html">Centro-Oeste</a></li>
-              <li><a class="dropdown-item" href="carnes-nordeste.html">Nordeste</a></li>
-              <li><a class="dropdown-item" href="carnes-norte.html">Norte</a></li>
-
-              <li>
-                <hr class="dropdown-divider border-warning">
-              </li>
-              <li><a class="dropdown-item" href="produtos.html">Ver tudo</a></li>
+              <li><a class="dropdown-item" href="Carnes/carnes-sul.html">Sul</a></li>
+              <li><a class="dropdown-item" href="Carnes/carnes-sudeste.html">Sudeste</a></li>
+              <li><a class="dropdown-item" href="Carnes/carnes-centro-oeste.html">Centro-Oeste</a></li>
+              <li><a class="dropdown-item" href="Carnes/carnes-nordeste.html">Nordeste</a></li>
+              <li><a class="dropdown-item" href="Carnes/carnes-norte.html">Norte</a></li>
             </ul>
           </li>
 
           <li class="nav-item ms-3 me-3 dropdown">
             <a class="nav-link nav-hover h6" href="#" role="button"><strong>Saladas e molhos</strong></a>
             <ul class="dropdown-menu border-warning">
-              <li><a class="dropdown-item" href="pastadeslaoque.html">Sul</a></li>
-              <li><a class="dropdown-item" href="pastadeslaoque.html">Sudeste</a></li>
-              <li><a class="dropdown-item" href="pastadeslaoque.html">Centro-Oeste</a></li>
-              <li><a class="dropdown-item" href="pastadeslaoque.html">Nordeste</a></li>
-              <li><a class="dropdown-item" href="pastadeslaoque.html">Norte</a></li>
-
-              <li>
-                <hr class="dropdown-divider border-warning">
-              </li>
-              <li><a class="dropdown-item" href="produtos.html">Ver tudo</a></li>
+              <li><a class="dropdown-item" href="Sal-Mol/s.m-sul.html">Sul</a></li>
+              <li><a class="dropdown-item" href="Sal-Mol/s.m-sudeste.html">Sudeste</a></li>
+              <li><a class="dropdown-item" href="Sal-Mol/s.m-centro-oeste.html">Centro-Oeste</a></li>
+              <li><a class="dropdown-item" href="Sal-Mol/s.m-nordeste.html">Nordeste</a></li>
+              <li><a class="dropdown-item" href="Sal-Mol/s.m-norte.html">Norte</a></li>
             </ul>
           </li>
         </ul>
@@ -205,7 +185,6 @@
 <div class="col-lg-6 col-12 text-center mt-4">
   <img src="img/favicon.ico" alt="Imagem pulsando" class="img-fluid d-block mx-auto imagem-pulsando" style="max-width: 80%; height: auto;">
 </div>
-
   </div>
 </div>
 
@@ -317,21 +296,21 @@
       </div>
     </div>
 
-    <!-- Coluna 3 - Lado direito (redes sociais) -->
+    <!-- Coluna 3 - Redes Sociais -->
     <div class="col-lg-4 col-sm-12 text-end mb-3">
       <h5 class="mb-3"><strong>Nos siga nas redes sociais</strong></h5>
       <div class="social-icons">
         <a href="https://www.facebook.com/SenaiMG" target="_blank">
-          <img src="/img/_FOOTER Facebook .png" alt="Facebook" style="width: 40px; height: 40px; margin-right: 10px;">
+          <img src="img/FOOTER Facebook.png" alt="Facebook" style="width: 40px; height: 40px; margin-right: 10px;">
         </a>
         <a href="https://www.instagram.com/senaiminas" target="_blank">
-          <img src="/img/_FOOTER Instagram.png" alt="Instagram" style="width: 40px; height: 40px; margin-right: 10px;">
+          <img src="img/FOOTER Instagram.png" alt="Instagram" style="width: 40px; height: 40px; margin-right: 10px;">
         </a>
         <a href="https://x.com/senaimg" target="_blank">
-          <img src="/img/_FOOTER Twitter.png" alt="Twitter" style="width: 40px; height: 40px; margin-right: 10px;">
+          <img src="img/FOOTER Twitter.png" alt="Twitter" style="width: 40px; height: 40px; margin-right: 10px;">
         </a>
         <a href="https://www.youtube.com/c/SenaiMG" target="_blank">
-          <img src="/img/_FOOTER youtube.png" alt="YouTube" style="width: 40px; height: 40px; margin-right: 10px;">
+          <img src="img/FOOTER youtube.png" alt="YouTube" style="width: 40px; height: 40px; margin-right: 10px;">
         </a>
       </div>
     </div>
@@ -351,14 +330,10 @@
       }
       </script> -->
 </footer>
-</main>
-  </body>
-  
+</main> 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
 </body>
-
-
 </html>
