--- a/livro.html
+++ b/livro.html
@@ -1,5 +1,247 @@
- <!-- CONTAINER 2: IMAGEM PULSANDO -->
- <div class="imagem.index" style="flex: 1; text-align: right;">
-    <img src="img/favicon.ico" alt="Imagem pulsando" class="imagem-pulsando">
-  </div>
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Quem Somos | Cantinho BRasileiro</title>
+
+  <!-- LINK BOOTSTRAP -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+    <!-- CSS LOCAL -->
+  <link rel="stylesheet" href="./style.css">
+
+  <!-- GOOGLE FONTS -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
+
+  <!--BOOTSTRAP ICONS-->
+  <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+
+  <style>
+    /* Cor barra de menu */
+    .navbar {
+  background-color: #f7d9743b !important; 
+    }
+    /* Fundo branco Dropdown*/
+    .dropdown-menu {
+      background-color: #ffffff79 !important; 
+    }
+    /* Cor do texto Dropdown*/
+    .dropdown-item, .dropdown-item:hover {
+      color: #333 !important;   
+    }
+
+/* FONTE E IMG DE FUNDO  */
+  body {
+    background-image: url('img/Background.JPG'); /* Substitua pelo caminho da sua imagem */
+    background-size: cover; /* Ajusta a imagem para cobrir toda a tela */
+    background-position: center center; /* Centraliza a imagem */
+    background-repeat: no-repeat; /* Evita a repetição da imagem */
+    font-family: "Lexend", serif;
+    color: rgb(233, 223, 90);
+  }
+
+  /*Footer*/
+  .social-icons a {
+  outline: none;
+  text-decoration: none;
+}
+</style>
+</head>
+
+<body>
+      <!--NAVBAR-->
+  <header>
+  <nav class="navbar navbar-expand-lg border-bottom border-warning">
+    <div class="container">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
+          <li class="nav-item">
+            <div class="container">
+              <a class="nav-link nav-hover h6" href="index.html"><strong>Início</strong></a>
+            </div>
+          </li>
+
+          <li class="nav-item">
+            <div class="container">
+              <a class="nav-link nav-hover h6" href="quemsomos.html"><strong>Quem Somos</strong></a>
+            </div>
+          </li>
+
+          <li class="nav-item ms-3 me-3 dropdown">
+            <a class="nav-link nav-hover h6" href="doces.html"><strong>Doces</strong></a>
+            <ul class="dropdown-menu border-warning">
+              <li><a class="dropdown-item" href="Doces/doces-sul.html">Sul</a></li>
+              <li><a class="dropdown-item" href="Doces/doces-sudeste.html">Sudeste</a></li>
+              <li><a class="dropdown-item" href="Doces/doces-centro-oeste.html">Centro-Oeste</a></li>
+              <li><a class="dropdown-item" href="Doces/doces-nordeste.html">Nordeste</a></li>
+              <li><a class="dropdown-item" href="Doces/doces-norte.html">Norte</a></li>
+            </ul>
+          </li>
+
+          <li class="nav-item ms-3 me-3 dropdown">
+            <a class="nav-link nav-hover h6" href="#" role="button"><strong>Salgados</strong></a>
+            <ul class="dropdown-menu border-warning">
+              <li><a class="dropdown-item" href="Salgados/salgados-sul.html">Sul</a></li>
+              <li><a class="dropdown-item" href="Salgados/salgados-sudeste.html">Sudeste</a></li>
+              <li><a class="dropdown-item" href="Salgados/salgados-centro-oeste.html">Centro-Oeste</a></li>
+              <li><a class="dropdown-item" href="Salgados/salgados-nordeste.html">Nordeste</a></li>
+              <li><a class="dropdown-item" href="Salgados/salgados-norte.html">Norte</a></li>
+            </ul>
+          </li>
+
+          <li class="nav-item ms-3 me-3 dropdown">
+            <a class="nav-link nav-hover h6" href="#" role="button"><strong>Bebidas</strong></a>
+            <ul class="dropdown-menu border-warning">
+              <li><a class="dropdown-item" href="Bebidas/bebidas-sul.html">Sul</a></li>
+              <li><a class="dropdown-item" href="Bebidas/bebidas-sudeste.html">Sudeste</a></li>
+              <li><a class="dropdown-item" href="Bebidas/bebidas-centro-oeste.html">Centro-Oeste</a></li>
+              <li><a class="dropdown-item" href="Bebidas/bebidas-nordeste.html">Nordeste</a></li>
+              <li><a class="dropdown-item" href="Bebidas/bebidas-norte.html">Norte</a></li>
+            </ul>
+          </li>
+
+          <li class="nav-item ms-3 me-3 dropdown">
+            <a class="nav-link nav-hover h6" href="#" role="button"><strong>Carnes</strong></a>
+            <ul class="dropdown-menu border-warning">
+              <li><a class="dropdown-item" href="Carnes/carnes-sul.html">Sul</a></li>
+              <li><a class="dropdown-item" href="Carnes/carnes-sudeste.html">Sudeste</a></li>
+              <li><a class="dropdown-item" href="Carnes/carnes-centro-oeste.html">Centro-Oeste</a></li>
+              <li><a class="dropdown-item" href="Carnes/carnes-nordeste.html">Nordeste</a></li>
+              <li><a class="dropdown-item" href="Carnes/carnes-norte.html">Norte</a></li>
+            </ul>
+          </li>
+
+          <li class="nav-item ms-3 me-3 dropdown">
+            <a class="nav-link nav-hover h6" href="#" role="button"><strong>Saladas e molhos</strong></a>
+            <ul class="dropdown-menu border-warning">
+              <li><a class="dropdown-item" href="Sal-Mol/s.m-sul.html">Sul</a></li>
+              <li><a class="dropdown-item" href="Sal-Mol/s.m-sudeste.html">Sudeste</a></li>
+              <li><a class="dropdown-item" href="Sal-Mol/s.m-centro-oeste.html">Centro-Oeste</a></li>
+              <li><a class="dropdown-item" href="Sal-Mol/s.m-nordeste.html">Nordeste</a></li>
+              <li><a class="dropdown-item" href="Sal-Mol/s.m-norte.html">Norte</a></li>
+            </ul>
+          </li>
+        </ul>
+        <a class="navbar-brand mx-4 tooltip-recado" href="livro.html" data-recado="Suas receitas favoritas!"> <!--Logo livro de receitas-->
+          <img src="img/receitas.fav.png" alt="Cantinho" width="50" height="50">
+      </a>  
+    </li>
+    </div>
+  </nav>
+</header>
+    <!-- Breadcrumb -->
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="index.html" style="color: #e2c7a4;">Início</a></li>
+            <li class="breadcrumb-item active" aria-current="page" style="color: #e2c7a4;">Livro de Receitas</li>
+        </ol>
+    </nav>
+
+    <!-- Imagem da Logo -->
+    <div class="text-center mt-4">
+        <img src="img/logo.png" alt="Logo" style="height: 210px;">
+    </div>
+
+  <div class="container mt-4 d-flex flex-column align-items-center">
+    <h3>Suas Receitas Favoritas!</h3>
+    <h4 class="mt-4">Compartilhe com seus amigos ou Salve em PDF.</h4>
+    <ul id="itensSacola" class="list-group">
+        <!-- receitas salvas pelo usuário serão inseridas aqui -->
+    </ul>
 </div>
+
+
+<script>
+// Função para carregar itens do livro
+function carregarLivro() {
+    const livro = JSON.parse(localStorage.getItem('livro')) || [];
+    const livroLista = document.getElementById('itensLivro');
+    
+    livroLista.innerHTML = ''; // Limpa a lista antes de adicionar novos itens
+
+    livro.forEach((item, index) => {
+        const li = document.createElement('li');
+        li.classList.add('list-group-item');
+        li.innerHTML = `
+            <strong>${item.nome}</strong> - ${item}
+            <button class="btn btn-danger btn-sm float-end" onclick="removerItem(${index})">Remover</button>
+        `;
+        livroLista.appendChild(li);
+    });
+}
+
+// Função para remover item do livro
+function removerItem(index) {
+    let livro = JSON.parse(localStorage.getItem('livro')) || [];
+    livro.splice(index, 1); // Remove o item pelo índice
+    localStorage.setItem('livro', JSON.stringify(livro));
+    carregarLivro(); // Recarrega o livro para mostrar os itens restantes
+}
+
+// Carregar o livro ao carregar a página
+window.onload = carregarLivro;
+</script>
+
+<!--FOOTER-->
+<footer>
+  <div class="container-fluid py-4" style="border-top: 2px solid rgb(252, 252, 119);">
+    <div class="row">
+      
+      <!-- Coluna 1 - Lado esquerdo -->
+      <div class="col-lg-4 col-sm-12 text-start mb-3">
+        <img src="img/favicon.ico" class="mb-3" width="150px">
+        <h6><strong>Cozinhar é para todos.</strong></h6>
+        <p class="small">© Cantinho Brasileiro 2024. Todos os direitos reservados.</p>
+      </div>
+  
+      <!-- Coluna 2 - Meio (com newsletter) -->
+      <div class="col-lg-4 col-sm-12 text-center mb-3">
+        <h5 class="mb-3"><strong>Entre em contato!</strong></h5>
+        <p>olaCantinho@gmail.com.br</p>
+  
+        <!-- Newsletter -->
+        <div class="newsletter">
+          <h6><strong>Inscreva-se para nossa newsletter</strong></h6>
+          <form action="newsletter.php" method="POST">
+            <div class="mb-3">
+              <input type="email" class="form-control" placeholder="Seu e-mail" name="email" required>
+            </div>
+            <button type="submit" class="btn btn-success">Inscrever-se</button>
+          </form>
+        </div>
+      </div>
+  
+      <!-- Coluna 3 - Redes Sociais -->
+      <div class="col-lg-4 col-sm-12 text-end mb-3">
+        <h5 class="mb-3"><strong>Nos siga nas redes sociais</strong></h5>
+        <div class="social-icons">
+          <a href="https://www.facebook.com/SenaiMG" target="_blank">
+            <img src="img/FOOTER Facebook.png" alt="Facebook" style="width: 40px; height: 40px; margin-right: 10px;">
+          </a>
+          <a href="https://www.instagram.com/senaiminas" target="_blank">
+            <img src="img/FOOTER Instagram.png" alt="Instagram" style="width: 40px; height: 40px; margin-right: 10px;">
+          </a>
+          <a href="https://x.com/senaimg" target="_blank">
+            <img src="img/FOOTER Twitter.png" alt="Twitter" style="width: 40px; height: 40px; margin-right: 10px;">
+          </a>
+          <a href="https://www.youtube.com/c/SenaiMG" target="_blank">
+            <img src="img/FOOTER youtube.png" alt="YouTube" style="width: 40px; height: 40px; margin-right: 10px;">
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
