--- a/quemsomos.html
+++ b/quemsomos.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cantinho BRasileiro</title>
+  <title>Quem Somos | Cantinho BRasileiro</title>
 
   <!-- LINK BOOTSTRAP -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -62,6 +62,12 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
+          <li class="nav-item">
+            <div class="container">
+              <a class="nav-link nav-hover h6" href="index.html"><strong>Início</strong></a>
+            </div>
+          </li>
 
           <li class="nav-item">
             <div class="container">
@@ -243,7 +249,7 @@
       </div>
     </div>
   </div>
-
+</footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
